.... OpenID4Java Library - CHANGELOG

========================================================================

This document highlights of the major changes in the OpenID4Java library. 
Please see the TODO for outstanding items.

    For the detailed logs please see the commit comments at:
    - http://code.google.com/p/openid4java

20070821:
    - Added support for OpenID Information Cards 1.0, draft 1
    - Added (OpenID-Infocard) DemoRP and InfocardOP sample/demo projects 

20070626:
    - Implemented OpenID Provider Authentication Policy Extension 1.0, draft 1
      http://openid.net/specs/openid-provider-authentication-policy-extension-1_0-01.html

20070530:
    - API change in SRegResponse: method public SRegResponse createFetchResponse(SRegRequest req, Map userData) throws MessageException
      replaced with factory method public static SRegResponse createSRegResponse(SRegRequest req, Map userData) throws MessageException

20070407:
    - Implemented OpenID Simple Registration 1.0 and 1.1

20070403:
    - Added deployable JSP-only Relying Party and OpenID Provider

20070321:
    - Added forward-proxy support for consumers.

20070304:
    - Added logging.

20070212:
    - Message.getDestinationUrl() replaces the following:
        AuthRequest.getRedirectUrl()
        AuthSuccess.getRedirectUrl()
        IndirectError.getReturnTo()

20070208:
    - supports OpenID Attribute Exchange draft 4

20070115:
    - supports OpenID Authentication 2.0 draft 11

20061203: First public release, version 0.9.1.x
    - supports OpenID Authentication 2.0, draft 10:
        http://openid.net/specs/openid-authentication-2_0-10.html
    - supports OpenID Attribute Exhcange 1.0, draft 3
    - (few outstanding spec issues remain)



========================================================================
Copyright 2006-2007 Sxip Identity Corporation

Package distribution:
  => http://code.sxip.com
          
Source code and defect management: