@@ -10,7 +10,7 @@ licensed under Apache 2.0.
 The library currently supports the following OpenID specifications:
 
 	- OpenID Authentication 2.0 (latest version)
-	- OpenID Attribute Exchange 1.0, draft 4
+	- OpenID Attribute Exchange 1.0, draft 7
 	- OpenID Simple Registration 1.0 and 1.1
 	- OpenID Provider Authentication Policy Extension 1.0, draft 1
 	- OpenID Information Cards 1.0, draft 1
